--- a/Fragrance/Fragrance.csproj
+++ b/Fragrance/Fragrance.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\images\Product\" />
+    <Folder Include="wwwroot\lib\Datatabel\" />
   </ItemGroup>
 
 </Project>
