--- a/.github/workflows/Fragrance.yml
+++ b/.github/workflows/Fragrance.yml
@@ -1,10 +1,10 @@
-name: Build and deploy .NET Core application to Web App Fragrance20250428172815
+name: Build and deploy .NET Core application to Web App Fragrance
 on:
   push:
     branches:
     - master
 env:
-  AZURE_WEBAPP_NAME: Fragrance20250428172815
+  AZURE_WEBAPP_NAME: Fragrance
   AZURE_WEBAPP_PACKAGE_PATH: Fragrance\published
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 9.0.x
@@ -43,7 +43,7 @@ jobs:
     - name: Azure Login
       uses: azure/login@v2
       with:
-        creds: ${{ secrets.Fragrance20250428172815_SPN }}
+        creds: ${{ secrets.Fragrance_SPN }}
     - name: Deploy to Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
