--- a/Fragrance/appsettings.json
+++ b/Fragrance/appsettings.json
@@ -2,8 +2,20 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.Authentication": "Information"
     }
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "640937380930-hm28m5rfn4u8i1s4k82kesbeuh64ip2d.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    },
+    "Facebook": {
+      "AppId": "531484386144763",
+      "AppSecret": "9bb337d930842fd5bf2c497c37cf81b4"
+    }
+ 
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
